--- a/404.html
+++ b/404.html
@@ -1,6 +1,7 @@
 ---
 permalink: /404.html
 layout: default
+canonical_url: https://williamjungerman.github.io/404.html
 ---
 
 <style type="text/css" media="screen">
